      Closes: #461908
  * reportbug/submit.py
    - clarify that in case no acknowledge is received, then there was an error;
      thanks to mpapet for the report; Closes: #575418
  * reportbug/ui/gtk2_ui.py
    - pass 'buglist' to 'sync_pre_operation' method of 'HandleBTSQueryPage'
      class, needed to run querybts; thanks to Andrey Rahmatullin for the
      report; Closes: #565283
  * bin/*, reportbub/*
    - add a user-configurable network timeout, adding the CLI option --timeout;
      thanks to Miles Bader for the report; Closes: #572316
  * man/*, doc/README.Users
    - added information about new --timeout CLI option, specifying that some
      network error might be due to a too low timeout; thanks to Michal Suchanek
      for the report; Closes: #571955

 -- Sandro Tosi <morph@debian.org>  Tue, 30 Mar 2010 21:49:15 +0200

reportbug (4.11) unstable; urgency=low

  [ Luca Bruno ]
  * reportbug/ui/gtk2_ui.py:
    - rename Forward button to Continue button; thanks to Matijs van Zuijlen for
      the report; Closes: #565140
    - more selectable labels and use text views for bug replies;
      thanks to Éric Araujo for the report; Closes: #564447
    - wrap text to be 79 chars width in the editor; thanks to Mark Brown for
      the report; Closes: #562878
    - fix focus stealing issues; thanks to Eduard Bloch for the report;
      Closes: #564418

  [ Sandro Tosi ]
  * share/presubj
    - specified the pager exit key doesn't apply to GTK+ UI; thanks to Éric
      Araujo for the report; Closes: 568196
    - clarified to not repot bugs against reportbug in case of GTK+ crashes
  * bin/reportbug, reportbug/utils.py
    - identify the pseudo-headers passed on the command-line and don't merge
      them in the mail headers, but add them to the bug "standard"
      pseudo-headers; thanks to Piotr Engelking for the report; Closes: #552167
    - add a very simple check for email validity, to rule out basic cases;